# unionchant

./: .gitignore  CLAUDE.md  EXECUTION-PLAN.md  LICENSE  PHASE-2-COMPLETE.md  PHASE-3-COMPLETE.md  PROGRESS.md  README.md  SPEC.md  START-HERE.md  WHITEPAPER.md  Whitepaper.pages  design-final.html  design-high-contrast-ui.html  design-light-cyan-variants.html  design-options-v2.html  design-options.html  design-organization-variants.html  design-variants.html  launchpad-plan.md  package-lock.json  package.json  test-dropout-simulation.js
.next/: trace  trace-build
contracts/: Anchor.toml
contracts/programs/chant_audit/: Cargo.toml  keypair.json
contracts/programs/chant_audit/src/: lib.rs
core/: README.md  agent-manager.js  ai-agent.js  run-all-tests.js  test-100-participants.js  test-3-tier-minimal.js  test-ai-full-demo.js  test-ai-generated-ideas.js  test-ai-real-ideas.js  test-ai-simple.js  test-constraints-core.js  test-engine.js  test-optimized-demo.js  union-chant-engine.js
docs/: CONSTRAINT-ENFORCEMENT.md  DEMOCRATIC-ANALYSIS-CORRECTIONS.md  DEMOCRATIC-ANALYSIS-V7.md  OUTREACH.md  QUICKSTART-V7-STABLE.md  V7-STABLE-CHANGELOG.md  V7-STABLE-FILES.txt  V7-STABLE-README.md
legacy/: index-v2.html  index-v3-fixed.html  index-v3.html  index-v4.html  index-v5.html  index-v6-delegation.html  server-v2.js  server-v3-fixed.js  server-v3.js  server-v4.js  server-v5-core.js  server-v6-delegation.js  test-v4.js  test-v5-core.js  test-v6-delegation.js
planning/: ARCHITECTURE-V8-DELIBERATIVE.md  PRODUCTIZATION-PLAN.md
server/: server-v8-deliberative.js
(+580 files in other folders)
