[package]
name = "chant_audit"
version = "0.1.0"
description = "On-chain audit log for Unity Chant deliberations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chant_audit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
